--- a/notebooks/basic_tutorial/03.Spatial_query_in_sedona.ipynb
+++ b/notebooks/basic_tutorial/03.Spatial_query_in_sedona.ipynb
@@ -69,15 +69,18 @@
     "- **ST_Intersects**(polygondf.polygonshape,pointdf.pointshape): Return true if A intersects B. \n",
     "- **ST_OrderingEquals**(A: geometry, B: geometry): Returns true if the geometries are equal and the coordinates are in the same order\n",
     "- **ST_Overlaps**(A: Geometry, B: Geometry): Return true if A overlaps B\n",
-    "- **ST_Relate**(geom1: Geometry, geom2: Geometry, intersectionMatrix: String):"
+    "- **ST_Relate**(geom1: Geometry, geom2: Geometry, intersectionMatrix: String):\n",
+    "- **ST_Touches**(A: Geometry, B: Geometry): Return true if A touches B\n",
+    "- **ST_Covers**(A: Geometry, B: Geometry): Return true if A covers B\n",
+    "- **ST_CoveredBy**(A: Geometry, B: Geometry): Return true if A is covered by B"
    ],
    "id": "ee2433d4d6aff593"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-02T12:12:01.056170Z",
-     "start_time": "2024-12-02T12:12:01.041393Z"
+     "end_time": "2024-12-04T13:23:29.473068Z",
+     "start_time": "2024-12-04T13:23:28.860421Z"
     }
    },
    "cell_type": "code",
@@ -90,13 +93,13 @@
    ],
    "id": "a652fc3c77a04cdf",
    "outputs": [],
-   "execution_count": 12
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-02T12:06:01.471745Z",
-     "start_time": "2024-12-02T12:06:01.458386Z"
+     "end_time": "2024-12-04T13:23:29.480138Z",
+     "start_time": "2024-12-04T13:23:29.473068Z"
     }
    },
    "cell_type": "code",
@@ -111,8 +114,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-02T12:06:27.717083Z",
-     "start_time": "2024-12-02T12:06:01.484707Z"
+     "end_time": "2024-12-04T13:23:34.009839Z",
+     "start_time": "2024-12-04T13:23:29.980867Z"
     }
    },
    "cell_type": "code",
@@ -135,8 +138,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-02T12:06:34.352749Z",
-     "start_time": "2024-12-02T12:06:28.126705Z"
+     "end_time": "2024-12-04T13:23:39.307551Z",
+     "start_time": "2024-12-04T13:23:34.009839Z"
     }
    },
    "cell_type": "code",
@@ -152,8 +155,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-02T12:06:34.373592Z",
-     "start_time": "2024-12-02T12:06:34.364304Z"
+     "end_time": "2024-12-04T13:23:39.327852Z",
+     "start_time": "2024-12-04T13:23:39.316967Z"
     }
    },
    "cell_type": "code",
@@ -168,8 +171,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-02T12:12:05.611762Z",
-     "start_time": "2024-12-02T12:12:05.597817Z"
+     "end_time": "2024-12-04T13:23:39.342703Z",
+     "start_time": "2024-12-04T13:23:39.337369Z"
     }
    },
    "cell_type": "code",
@@ -180,7 +183,7 @@
    ],
    "id": "74996809a0327fa0",
    "outputs": [],
-   "execution_count": 13
+   "execution_count": 6
   },
   {
    "metadata": {},
@@ -199,12 +202,7 @@
    "id": "869d3439eaee0797"
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-12-02T13:47:19.171133Z",
-     "start_time": "2024-12-02T13:47:19.151252Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "ile_france = \"POLYGON((1.8814087 49.2265665,1.8099976 48.5884175,2.9347229 48.5820584,3.0528259 49.2068317,1.8814087 49.2265665))\"\n",
@@ -219,13 +217,13 @@
    ],
    "id": "46cb2eebc6dc4c17",
    "outputs": [],
-   "execution_count": 36
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-02T16:17:53.395749Z",
-     "start_time": "2024-12-02T16:17:53.359783Z"
+     "end_time": "2024-12-04T13:23:39.585224Z",
+     "start_time": "2024-12-04T13:23:39.425308Z"
     }
    },
    "cell_type": "code",
@@ -242,13 +240,13 @@
    ],
    "id": "9278d517f613fb72",
    "outputs": [],
-   "execution_count": 47
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-02T16:18:07.904435Z",
-     "start_time": "2024-12-02T16:18:07.775883Z"
+     "end_time": "2024-12-04T13:23:40.018297Z",
+     "start_time": "2024-12-04T13:23:39.630753Z"
     }
    },
    "cell_type": "code",
@@ -277,13 +275,13 @@
      ]
     }
    ],
-   "execution_count": 48
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-02T12:40:21.514601Z",
-     "start_time": "2024-12-02T12:40:21.485630Z"
+     "end_time": "2024-12-04T13:23:40.116466Z",
+     "start_time": "2024-12-04T13:23:40.091467Z"
     }
    },
    "cell_type": "code",
@@ -294,13 +292,13 @@
    ],
    "id": "f33a34ca5e28ed84",
    "outputs": [],
-   "execution_count": 26
+   "execution_count": 10
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-02T12:40:23.245490Z",
-     "start_time": "2024-12-02T12:40:23.152711Z"
+     "end_time": "2024-12-04T13:23:40.370989Z",
+     "start_time": "2024-12-04T13:23:40.295544Z"
     }
    },
    "cell_type": "code",
@@ -320,13 +318,13 @@
      ]
     }
    ],
-   "execution_count": 27
+   "execution_count": 11
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-02T13:04:52.978438Z",
-     "start_time": "2024-12-02T13:04:52.917865Z"
+     "end_time": "2024-12-04T13:23:40.540379Z",
+     "start_time": "2024-12-04T13:23:40.452999Z"
     }
    },
    "cell_type": "code",
@@ -350,7 +348,7 @@
      ]
     }
    ],
-   "execution_count": 32
+   "execution_count": 12
   },
   {
    "metadata": {},
@@ -361,8 +359,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-02T13:45:31.690764Z",
-     "start_time": "2024-12-02T13:45:31.509366Z"
+     "end_time": "2024-12-04T13:23:40.734246Z",
+     "start_time": "2024-12-04T13:23:40.650186Z"
     }
    },
    "cell_type": "code",
@@ -386,23 +384,26 @@
      ]
     }
    ],
-   "execution_count": 33
+   "execution_count": 13
   },
   {
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "## 3. ST_Disjoint\n",
+    "## 3. ST_Disjoint vs ST_Overlaps\n",
     "\n",
-    "\n"
+    "- ST_Disjoint: returns true if two polygon has no common area.\n",
+    "- ST_Overlaps: returns true if two polygon has common area. This function can be viewed as the opposite of ST_Disjoint\n",
+    "\n",
+    "In below examples\n"
    ],
    "id": "ebb321d2f50fa3d2"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-02T13:46:56.745310Z",
-     "start_time": "2024-12-02T13:46:56.685937Z"
+     "end_time": "2024-12-04T13:23:41.023919Z",
+     "start_time": "2024-12-04T13:23:40.935187Z"
     }
    },
    "cell_type": "code",
@@ -426,13 +427,43 @@
      ]
     }
    ],
-   "execution_count": 34
+   "execution_count": 14
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-02T13:47:23.618947Z",
-     "start_time": "2024-12-02T13:47:23.550268Z"
+     "end_time": "2024-12-04T13:23:41.404953Z",
+     "start_time": "2024-12-04T13:23:41.301699Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "query = f\"SELECT ST_Overlaps(ST_GeomFromWKT('{casd}'),ST_GeomFromWKT('{insee}'))\"\n",
+    "resu = evalSpaceJoinQuery(query)\n",
+    "resu.show()"
+   ],
+   "id": "1c6bd25c3f204ad4",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------+\n",
+      "|result|\n",
+      "+------+\n",
+      "|  true|\n",
+      "+------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "execution_count": 15
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-04T13:23:41.766192Z",
+     "start_time": "2024-12-04T13:23:41.602397Z"
     }
    },
    "cell_type": "code",
@@ -456,15 +487,37 @@
      ]
     }
    ],
-   "execution_count": 37
+   "execution_count": 16
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-04T13:23:42.019379Z",
+     "start_time": "2024-12-04T13:23:41.933722Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "5f8c0dd3f90f6523"
+   "source": [
+    "query = f\"SELECT ST_Overlaps(ST_GeomFromWKT('{casd}'),ST_GeomFromWKT('{paul_brousse}'))\"\n",
+    "resu = evalSpaceJoinQuery(query)\n",
+    "resu.show()"
+   ],
+   "id": "5f8c0dd3f90f6523",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------+\n",
+      "|result|\n",
+      "+------+\n",
+      "| false|\n",
+      "+------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "execution_count": 17
   },
   {
    "metadata": {},
@@ -486,8 +539,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-02T13:56:17.035141Z",
-     "start_time": "2024-12-02T13:56:16.979097Z"
+     "end_time": "2024-12-04T13:23:45.002563Z",
+     "start_time": "2024-12-04T13:23:44.842728Z"
     }
    },
    "cell_type": "code",
@@ -513,7 +566,7 @@
      ]
     }
    ],
-   "execution_count": 44
+   "execution_count": 18
   },
   {
    "metadata": {},
@@ -531,8 +584,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-02T14:02:34.810223Z",
-     "start_time": "2024-12-02T14:02:34.702133Z"
+     "end_time": "2024-12-04T13:24:07.073267Z",
+     "start_time": "2024-12-04T13:24:06.998853Z"
     }
    },
    "cell_type": "code",
@@ -558,21 +611,23 @@
      ]
     }
    ],
-   "execution_count": 45
+   "execution_count": 19
   },
   {
    "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "3eab9e30e8b286af"
+   "cell_type": "markdown",
+   "source": [
+    "You can notice the above query returns true, even though the line string coordinates are different. But they represent the same line.\n",
+    "\n",
+    "The below query returns false, because the coordinates and order must be exactly the same to satisfy the function condition."
+   ],
+   "id": "fddd36f5535ff74f"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-02T16:07:07.607182Z",
-     "start_time": "2024-12-02T16:07:07.331988Z"
+     "end_time": "2024-12-04T13:24:08.318151Z",
+     "start_time": "2024-12-04T13:24:08.252629Z"
     }
    },
    "cell_type": "code",
@@ -598,7 +653,259 @@
      ]
     }
    ],
-   "execution_count": 46
+   "execution_count": 20
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## ST_Intersects vs ST_Touches",
+   "id": "75eedc738dd0e14c"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-04T13:24:10.420559Z",
+     "start_time": "2024-12-04T13:24:10.331088Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "line1 = \"LINESTRING(0 0,10 10)\"\n",
+    "point1 = \"POINT(5 5)\"\n",
+    "\n",
+    "query = f\"SELECT ST_Intersects(ST_GeomFromWKT('{line1}'),ST_GeomFromWKT('{point1}'))\"\n",
+    "resu = evalSpaceJoinQuery(query)\n",
+    "resu.show()"
+   ],
+   "id": "c3c055421f68214",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------+\n",
+      "|result|\n",
+      "+------+\n",
+      "|  true|\n",
+      "+------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "execution_count": 21
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-04T13:32:53.066562Z",
+     "start_time": "2024-12-04T13:32:52.993455Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "query = f\"SELECT ST_Touches(ST_GeomFromWKT('{line1}'),ST_GeomFromWKT('{point1}'))\"\n",
+    "resu = evalSpaceJoinQuery(query)\n",
+    "resu.show()"
+   ],
+   "id": "ac1545d1fb5e3fa9",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------+\n",
+      "|result|\n",
+      "+------+\n",
+      "| false|\n",
+      "+------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "execution_count": 24
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-04T13:24:53.777244Z",
+     "start_time": "2024-12-04T13:24:53.681540Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "query = f\"SELECT ST_Intersects(ST_GeomFromWKT('{casd}'),ST_GeomFromWKT('{insee}'))\"\n",
+    "resu = evalSpaceJoinQuery(query)\n",
+    "resu.show()"
+   ],
+   "id": "480945d8224fd9bd",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------+\n",
+      "|result|\n",
+      "+------+\n",
+      "|  true|\n",
+      "+------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "execution_count": 22
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-04T13:26:48.262124Z",
+     "start_time": "2024-12-04T13:26:48.199181Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "query = f\"SELECT ST_Touches(ST_GeomFromWKT('{casd}'),ST_GeomFromWKT('{insee}'))\"\n",
+    "resu = evalSpaceJoinQuery(query)\n",
+    "resu.show()"
+   ],
+   "id": "cd0151f4073af098",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------+\n",
+      "|result|\n",
+      "+------+\n",
+      "| false|\n",
+      "+------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "execution_count": 23
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## ST_Relate\n",
+    "\n",
+    "The first variant of the function computes and returns the [Dimensionally Extended 9-Intersection Model (DE-9IM) matrix string](https://en.wikipedia.org/wiki/DE-9IM) representing the spatial relationship between the two input geometry objects.\n",
+    "\n",
+    "The second variant of the function evaluates whether the two input geometries satisfy a specific spatial relationship defined by the provided intersectionMatrix pattern."
+   ],
+   "id": "29916c7e07a142d6"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-04T10:40:09.569727Z",
+     "start_time": "2024-12-04T10:40:09.461574Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "query = f\"SELECT ST_Relate(ST_GeomFromWKT('{casd}'),ST_GeomFromWKT('{insee}'))\"\n",
+    "resu = evalSpaceJoinQuery(query)\n",
+    "resu.show()"
+   ],
+   "id": "e5f1ae889b6d8f2f",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------+\n",
+      "|   result|\n",
+      "+---------+\n",
+      "|212101212|\n",
+      "+---------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "execution_count": 25
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-04T10:41:27.565102Z",
+     "start_time": "2024-12-04T10:41:27.501181Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "relation = \"212101212\"\n",
+    "query = f\"SELECT ST_Relate(ST_GeomFromWKT('{casd}'),ST_GeomFromWKT('{insee}'), {relation})\"\n",
+    "resu = evalSpaceJoinQuery(query)\n",
+    "resu.show()"
+   ],
+   "id": "16775b5e58a7268",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------+\n",
+      "|result|\n",
+      "+------+\n",
+      "|  true|\n",
+      "+------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "execution_count": 26
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## ST_RelateMatch\n",
+    "\n",
+    "This function tests the relationship between `two Dimensionally Extended 9-Intersection Model (DE-9IM) matrices representing geometry intersections`. It evaluates whether the DE-9IM matrix specified in matrix1 satisfies the intersection pattern defined by matrix2. The matrix2 parameter can be an exact DE-9IM value or a pattern containing wildcard characters."
+   ],
+   "id": "74dcc0f2bd043ab8"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-04T13:36:48.953007Z",
+     "start_time": "2024-12-04T13:36:48.882317Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "de_matrix1 = '101202FFF'\n",
+    "de_matrix2 = 'TTTTTTFFF'\n",
+    "query = f\"SELECT ST_RelateMatch('{de_matrix1}','{de_matrix2}')\"\n",
+    "resu = evalSpaceJoinQuery(query)\n",
+    "resu.show()"
+   ],
+   "id": "ad33be88cd123ae5",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------+\n",
+      "|result|\n",
+      "+------+\n",
+      "|  true|\n",
+      "+------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "execution_count": 26
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "776e9bcad014feaa"
   }
  ],
  "metadata": {
