finish spatial query

--- a/notebooks/basic_tutorial/03.Spatial_query_in_sedona.ipynb
+++ b/notebooks/basic_tutorial/03.Spatial_query_in_sedona.ipynb
@@ -79,8 +79,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-04T13:23:29.473068Z",
-     "start_time": "2024-12-04T13:23:28.860421Z"
+     "end_time": "2024-12-05T08:57:26.944910Z",
+     "start_time": "2024-12-05T08:57:23.321810Z"
     }
    },
    "cell_type": "code",
@@ -98,8 +98,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-04T13:23:29.480138Z",
-     "start_time": "2024-12-04T13:23:29.473068Z"
+     "end_time": "2024-12-05T09:01:47.912869Z",
+     "start_time": "2024-12-05T09:01:47.907299Z"
     }
    },
    "cell_type": "code",
@@ -114,8 +114,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-04T13:23:34.009839Z",
-     "start_time": "2024-12-04T13:23:29.980867Z"
+     "end_time": "2024-12-05T09:02:16.129823Z",
+     "start_time": "2024-12-05T09:01:49.838232Z"
     }
    },
    "cell_type": "code",
@@ -138,8 +138,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-04T13:23:39.307551Z",
-     "start_time": "2024-12-04T13:23:34.009839Z"
+     "end_time": "2024-12-05T09:02:21.758674Z",
+     "start_time": "2024-12-05T09:02:16.132443Z"
     }
    },
    "cell_type": "code",
@@ -155,8 +155,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-04T13:23:39.327852Z",
-     "start_time": "2024-12-04T13:23:39.316967Z"
+     "end_time": "2024-12-05T09:02:21.779472Z",
+     "start_time": "2024-12-05T09:02:21.767478Z"
     }
    },
    "cell_type": "code",
@@ -171,8 +171,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-04T13:23:39.342703Z",
-     "start_time": "2024-12-04T13:23:39.337369Z"
+     "end_time": "2024-12-05T09:02:21.794685Z",
+     "start_time": "2024-12-05T09:02:21.789723Z"
     }
    },
    "cell_type": "code",
@@ -202,7 +202,12 @@
    "id": "869d3439eaee0797"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-05T09:02:21.809269Z",
+     "start_time": "2024-12-05T09:02:21.803406Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "ile_france = \"POLYGON((1.8814087 49.2265665,1.8099976 48.5884175,2.9347229 48.5820584,3.0528259 49.2068317,1.8814087 49.2265665))\"\n",
@@ -222,8 +227,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-04T13:23:39.585224Z",
-     "start_time": "2024-12-04T13:23:39.425308Z"
+     "end_time": "2024-12-05T09:02:21.962907Z",
+     "start_time": "2024-12-05T09:02:21.819460Z"
     }
    },
    "cell_type": "code",
@@ -245,8 +250,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-04T13:23:40.018297Z",
-     "start_time": "2024-12-04T13:23:39.630753Z"
+     "end_time": "2024-12-05T09:02:22.407924Z",
+     "start_time": "2024-12-05T09:02:22.032798Z"
     }
    },
    "cell_type": "code",
@@ -280,8 +285,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-04T13:23:40.116466Z",
-     "start_time": "2024-12-04T13:23:40.091467Z"
+     "end_time": "2024-12-05T09:02:22.450939Z",
+     "start_time": "2024-12-05T09:02:22.424660Z"
     }
    },
    "cell_type": "code",
@@ -297,8 +302,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-04T13:23:40.370989Z",
-     "start_time": "2024-12-04T13:23:40.295544Z"
+     "end_time": "2024-12-05T09:02:22.682936Z",
+     "start_time": "2024-12-05T09:02:22.606104Z"
     }
    },
    "cell_type": "code",
@@ -323,8 +328,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-04T13:23:40.540379Z",
-     "start_time": "2024-12-04T13:23:40.452999Z"
+     "end_time": "2024-12-05T09:02:22.915171Z",
+     "start_time": "2024-12-05T09:02:22.801488Z"
     }
    },
    "cell_type": "code",
@@ -359,8 +364,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-04T13:23:40.734246Z",
-     "start_time": "2024-12-04T13:23:40.650186Z"
+     "end_time": "2024-12-05T09:02:23.259910Z",
+     "start_time": "2024-12-05T09:02:23.132245Z"
     }
    },
    "cell_type": "code",
@@ -402,8 +407,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-04T13:23:41.023919Z",
-     "start_time": "2024-12-04T13:23:40.935187Z"
+     "end_time": "2024-12-05T09:02:23.615053Z",
+     "start_time": "2024-12-05T09:02:23.509109Z"
     }
    },
    "cell_type": "code",
@@ -432,8 +437,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-04T13:23:41.404953Z",
-     "start_time": "2024-12-04T13:23:41.301699Z"
+     "end_time": "2024-12-05T09:02:23.939629Z",
+     "start_time": "2024-12-05T09:02:23.853842Z"
     }
    },
    "cell_type": "code",
@@ -462,8 +467,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-04T13:23:41.766192Z",
-     "start_time": "2024-12-04T13:23:41.602397Z"
+     "end_time": "2024-12-05T09:02:24.168440Z",
+     "start_time": "2024-12-05T09:02:24.102809Z"
     }
    },
    "cell_type": "code",
@@ -492,8 +497,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-04T13:23:42.019379Z",
-     "start_time": "2024-12-04T13:23:41.933722Z"
+     "end_time": "2024-12-05T09:02:24.511331Z",
+     "start_time": "2024-12-05T09:02:24.427775Z"
     }
    },
    "cell_type": "code",
@@ -539,8 +544,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-04T13:23:45.002563Z",
-     "start_time": "2024-12-04T13:23:44.842728Z"
+     "end_time": "2024-12-05T09:03:12.255252Z",
+     "start_time": "2024-12-05T09:03:12.139957Z"
     }
    },
    "cell_type": "code",
@@ -584,8 +589,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-04T13:24:07.073267Z",
-     "start_time": "2024-12-04T13:24:06.998853Z"
+     "end_time": "2024-12-05T09:03:13.834169Z",
+     "start_time": "2024-12-05T09:03:13.733352Z"
     }
    },
    "cell_type": "code",
@@ -626,8 +631,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-04T13:24:08.318151Z",
-     "start_time": "2024-12-04T13:24:08.252629Z"
+     "end_time": "2024-12-05T09:03:14.581430Z",
+     "start_time": "2024-12-05T09:03:14.484851Z"
     }
    },
    "cell_type": "code",
@@ -658,14 +663,20 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "## ST_Intersects vs ST_Touches",
+   "source": [
+    "## ST_Intersects vs ST_Touches\n",
+    "\n",
+    "**ST_Intersects**: If geometry A intersects geometry B.\n",
+    "\n",
+    "**ST_Touches**:\n"
+   ],
    "id": "75eedc738dd0e14c"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-04T13:24:10.420559Z",
-     "start_time": "2024-12-04T13:24:10.331088Z"
+     "end_time": "2024-12-05T09:03:15.616253Z",
+     "start_time": "2024-12-05T09:03:15.548045Z"
     }
    },
    "cell_type": "code",
@@ -697,12 +708,14 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-04T13:32:53.066562Z",
-     "start_time": "2024-12-04T13:32:52.993455Z"
+     "end_time": "2024-12-05T09:03:15.980282Z",
+     "start_time": "2024-12-05T09:03:15.928040Z"
     }
    },
    "cell_type": "code",
    "source": [
+    "# in this example, touches returns false, it means touches and intersects are not the same\n",
+    "# point1 is in the middle of line1, so it intersects, but not touches\n",
     "query = f\"SELECT ST_Touches(ST_GeomFromWKT('{line1}'),ST_GeomFromWKT('{point1}'))\"\n",
     "resu = evalSpaceJoinQuery(query)\n",
     "resu.show()"
@@ -722,17 +735,50 @@
      ]
     }
    ],
-   "execution_count": 24
+   "execution_count": 22
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-04T13:24:53.777244Z",
-     "start_time": "2024-12-04T13:24:53.681540Z"
+     "end_time": "2024-12-05T09:03:30.739636Z",
+     "start_time": "2024-12-05T09:03:30.643995Z"
     }
    },
    "cell_type": "code",
    "source": [
+    "# in this example, touches return true, because the point2 is an end point of line1\n",
+    "point2=\"POINT(10 10)\"\n",
+    "query = f\"SELECT ST_Touches(ST_GeomFromWKT('{line1}'),ST_GeomFromWKT('{point2}'))\"\n",
+    "resu = evalSpaceJoinQuery(query)\n",
+    "resu.show()"
+   ],
+   "id": "dbe263acc0672cd0",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------+\n",
+      "|result|\n",
+      "+------+\n",
+      "|  true|\n",
+      "+------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "execution_count": 26
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-05T09:03:17.626201Z",
+     "start_time": "2024-12-05T09:03:17.554728Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# polygone insee and casd share a common area, so intersects returns True\n",
     "query = f\"SELECT ST_Intersects(ST_GeomFromWKT('{casd}'),ST_GeomFromWKT('{insee}'))\"\n",
     "resu = evalSpaceJoinQuery(query)\n",
     "resu.show()"
@@ -752,17 +798,19 @@
      ]
     }
    ],
-   "execution_count": 22
+   "execution_count": 24
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-04T13:26:48.262124Z",
-     "start_time": "2024-12-04T13:26:48.199181Z"
+     "end_time": "2024-12-05T09:03:20.594436Z",
+     "start_time": "2024-12-05T09:03:20.519456Z"
     }
    },
    "cell_type": "code",
    "source": [
+    "# touches returns false, because it shares a common area. For two polygone touches return true, the two polygon must have shared \n",
+    "# edges, but not have common area\n",
     "query = f\"SELECT ST_Touches(ST_GeomFromWKT('{casd}'),ST_GeomFromWKT('{insee}'))\"\n",
     "resu = evalSpaceJoinQuery(query)\n",
     "resu.show()"
@@ -782,7 +830,7 @@
      ]
     }
    ],
-   "execution_count": 23
+   "execution_count": 25
   },
   {
    "metadata": {},
@@ -901,11 +949,105 @@
   },
   {
    "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## ST_Covers and ST_CoveredBy\n",
+    "\n",
+    "**ST_Covers**(A: Geometry, B: Geometry): Return true if A covers B\n",
+    "\n",
+    "**ST_CoveredBy**(A: Geometry, B: Geometry): Return true if A is covered by B\n"
+   ],
+   "id": "28b1f7aaad8d8493"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-05T09:18:20.227779Z",
+     "start_time": "2024-12-05T09:18:20.149208Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "776e9bcad014feaa"
+   "source": [
+    "query = f\"SELECT ST_Covers(ST_GeomFromWKT('{ile_france}'),ST_GeomFromWKT('{casd}'))\"\n",
+    "resu = evalSpaceJoinQuery(query)\n",
+    "resu.show()"
+   ],
+   "id": "cc2ef21043aaa0a2",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------+\n",
+      "|result|\n",
+      "+------+\n",
+      "|  true|\n",
+      "+------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "execution_count": 27
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-05T09:19:26.611202Z",
+     "start_time": "2024-12-05T09:19:26.541590Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "query = f\"SELECT ST_CoveredBy(ST_GeomFromWKT('{casd}'),ST_GeomFromWKT('{ile_france}'))\"\n",
+    "resu = evalSpaceJoinQuery(query)\n",
+    "resu.show()"
+   ],
+   "id": "fc131ca03cb847b3",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------+\n",
+      "|result|\n",
+      "+------+\n",
+      "|  true|\n",
+      "+------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "execution_count": 28
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-05T09:20:04.932006Z",
+     "start_time": "2024-12-05T09:20:04.869444Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "query = f\"SELECT ST_Covers(ST_GeomFromWKT('{ile_france}'),ST_GeomFromWKT('{bordeaux}'))\"\n",
+    "resu = evalSpaceJoinQuery(query)\n",
+    "resu.show()"
+   ],
+   "id": "4bd7c7fd730b646c",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------+\n",
+      "|result|\n",
+      "+------+\n",
+      "| false|\n",
+      "+------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "execution_count": 29
   }
  ],
  "metadata": {
