add orsm notebook

--- a/notebooks/basic_tutorial/06.Real_world_problems.ipynb
+++ b/notebooks/basic_tutorial/06.Real_world_problems.ipynb
@@ -13,13 +13,7 @@
    "source": [
     "from sedona.spark import *\n",
     "from pathlib import Path\n",
-    "from pyspark.sql.functions import col, lower\n",
-    "from pyspark.sql import DataFrame\n",
-    "import json\n",
-    "\n",
-    "from ipyleaflet import Map, basemaps, basemap_to_tiles, MarkerCluster, Marker, AwesomeIcon\n",
-    "from ipywidgets import Layout\n",
-    "import numpy as np"
+    "from pyspark.sql.functions import col, lower\n"
    ],
    "outputs": [],
    "execution_count": 120
